# EVA-CLIENT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/00_base/: defaults.py
configs/00_openloop/: arx_r5_openloop.py  arx_x5_openloop.py  dual_agilex_piper_openloop.py  dual_franka_openloop.py  r1lite_openloop.py  ur5e_openloop.py
configs/01_deploy/agibot_g2/: _base.py  openpi_eef.py  openpi_qpos.py
configs/01_deploy/arx_r5/: _base.py  openpi_eef.py  openpi_qpos.py  table_tennis.py
configs/01_deploy/arx_x5/: _base.py  openpi_eef.py  openpi_qpos.py
configs/01_deploy/dual_agilex_piper/: _base.py  eva_sim_openpi_qpos_zmq.py  eva_sim_qpos.py  openpi_eef.py  openpi_qpos.py
configs/01_deploy/dual_franka/: _base.py  openpi_eef.py  openpi_qpos.py
configs/01_deploy/i2rt_dual_yam/: _base.py  openpi_qpos.py
configs/01_deploy/i2rt_yam/: _base.py  openpi_qpos.py
configs/01_deploy/r1lite/: _base.py  eva_base.py  eva_eef.py  eva_qpos.py  openpi_base.py  openpi_eef.py  openpi_qpos.py
configs/01_deploy/ur5e/: _base.py  openpi_eef.py  openpi_qpos.py
configs/02_collection/: agibot_g2.py  arx_r5.py  arx_x5.py  dual_agilex_piper.py  dual_agilex_piper_eva_sim.py  dual_agilex_piper_eva_sim_openpi_qpos_zmq.py  dual_franka.py  i2rt_dual_yam.py  i2rt_yam.py  r1lite.py  ur5e.py
configs/03_evaluation/: arx_r5_eval.py  arx_x5_eval.py  dual_agilex_piper_eva_sim_eval.py  dual_agilex_piper_eval.py  r1lite_eval.py  ur5e_eval.py
configs/04_rl/: agibot_g2_rl.py  arx_r5_rl.py  dual_agilex_piper_rl.py  dual_franka_rl.py  r1lite_rl.py  ur5e_rl.py
docs/: concepts.md  configuration.md  console.md  control-channel.md  development.md  installation.md  quick-start.md  recording.md  web-console.md
examples/agilex_dataset/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
examples/control_channel/: eva_ctl.py
examples/fake_critic/: README.md  fake_critic_server.py
examples/fake_policy/: fake_policy_server.py  run_fake_policy.sh
examples/hardware/: fake_common.py
examples/hardware/agibot_g2/: README.md  agibot_gdk_mock.py  fake_node.py  node.py  run_fake_node.sh
examples/hardware/agilex_piper/: README.md  fake_node.py  run_agilex_ros.sh  run_agilex_visualize.sh  run_fake_node.sh
examples/hardware/arx/: README.md  camera.py  fake_node.py  node.py  robot.py  run_fake_node.sh  run_hardware.sh  teleop.py
examples/hardware/arx_x5/: README.md  node.py  run_node.sh
examples/hardware/franka/: README.md  camera.py  fake_node.py  node.py  robot.py  run_fake_node.sh  run_hardware.sh
examples/hardware/i2rt/: README.md  bring_up_can.sh  camera.py  fake_node.py  inspect_hardware.sh  node.py  pyproject.toml  robot.py  run_fake_node.sh  run_hardware.sh  run_left_leader.sh  setup_sdk.sh  wire.py
examples/hardware/i2rt/patches/: i2rt-sdk-eva-visual.patch  i2rt-sdk-safe-shutdown.patch
examples/hardware/pedal/: pedal_monitor.py  pedal_web_next_reset.py
examples/hardware/r1_lite/: README.md  cat_operator_button.py  fake_node.py  fastdds_r1lite_super_client.xml  kill_hardware.sh  reset_torso.py  run_fake_node.sh  run_hardware.sh
examples/hardware/ur5e/: README.md  camera.py  fake_node.py  gripper.py  node.py  robot.py  run_fake_node.sh  run_hardware.sh  teleop.py
src/: main.py  ros_master_teleop_bridge.py  ros_master_teleop_receiver.py
src/core/: __init__.py  config.py  registry.py  types.py
src/core/app/: __init__.py  calibrate_session.py  cli.py  collection_capture.py  command_catalog.py  control_channel.py  operator_control.py  rl.py  run.py  state.py
src/core/cfg/: __init__.py  _utils.py  config.py  registry.py
src/core/recorder/: __init__.py  collection.py  collection_alignment.py  episode.py  lerobot_meta.py
src/core/utils/: __init__.py  images.py  lerobot.py  math.py  paths.py  smooth_dataset.py  ssh_forward.py
src/critic_client/: __init__.py  base.py  runner.py  websocket.py
src/policy_client/: __init__.py  _ws.py  base.py  gr00t.py  openpi.py  starvla.py
src/robots/: __init__.py  base.py  utils.py
src/robots/kinematics/: pyroki.py  solver.py
src/robots/zoo/: __init__.py
src/strategy/: __init__.py  act_strategy.py  action_buffer.py  async_strategy.py  base_strategy.py  naive_strategy.py  rtc_strategy.py
src/tools/: __init__.py  calibration.py
src/transport/: __init__.py  base.py  dataset.py  ros1.py  ros2.py  utils.py  zmq.py
tests/: test_pedal_web_next_reset.py
tests/app/: test_control_channel.py
tests/comms/: test_critic_clients.py  test_critic_runner.py  test_dataset_transport.py  test_policy_clients.py  test_websocket_connect_kwargs.py  test_wire.py
tests/config/: test_calibration.py  test_config.py  test_console_strategy_selection.py  test_control_state.py  test_eval_paths.py  test_operator_control.py  test_robot_visualization.py
tests/config/fixtures/: calibration_results.json
tests/core/: test_smooth_dataset.py
tests/core_app/: test_collection_capture.py
tests/hardware/: test_fake_hil.py  test_i2rt_adapter.py  test_r1lite_fake_e2e_harness.py  test_r1lite_fake_node.py  test_r1lite_reset_torso.py  test_r1lite_run_hardware.py  test_r1lite_startup_scripts.py
tests/ik/: test_action_processing.py  test_eef_format.py  test_math.py  test_solver.py
tests/integration/web/: _harness.py  conftest.py  test_console_camera_api.py  test_console_eval.py  test_console_flow.py  test_console_live_series.py  test_console_rl.py  test_console_state_machine.py  test_console_static.py  test_fluency_timing.py  test_hil_fake_e2e.py  test_replay_runtime.py  test_replay_transforms.py
tests/manual/: benchmark_state_only_latency.py  replay_perf_probe.py  verify_async_save_perf.py  verify_eval_flow_e2e.py  verify_eval_lerobot_meta.py  verify_eval_rollout.py  viser_track_chunk.py
tests/recorder/: test_collection_alignment.py  test_episode_logger.py  test_lerobot_meta.py  test_rollout_interventions.py
tests/strategy/: test_action_buffer.py  test_strategy_build.py
tests/transport/: test_base.py  test_build_transport.py  test_ros1.py  test_ros2.py
tools/: browser_cdp.py  run_r1lite_fake_e2e.py
(+125 files in other folders)
